--- a/index.html
+++ b/index.html
@@ -4,11 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,300;8..144,400;8..144,500;8..144,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
     <title>Práctica eCommerce</title>
 </head>
 <body>
-    
+    <div class="overlay">
+
+    </div>
+    <div class="left-side">
+        <span class="logo">Fashion</span>
+        <!-- ------------------------------- -->
+        <div class="sm product">
+            <h1 class="product-index">01</h1>
+            <div class="sm-product-img-container">
+                <img class="sm-product-img" src="./IMG/img1.jpg" alt="">
+            </div>
+            <p class="sm-product-des">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates consequatur repudiandae suscipit unde. Iusto, modi!
+            </p>
+        </div>
+        <!-- ------------------------------ -->
+        <div class="social-link">
+            <img src="./IMG/facebook.png" alt="" class="social-link-img">
+            <img src="./IMG/instagram.png" alt="" class="social-link-img">
+        </div>
+    </div>
+    <div class="left-right">
+        <img class="backdrop-img" src="./IMG/img1.jpg" alt="">
+        <div class="content">
+            <div class="product-detail">
+                <h1 class="product-name">Yellow Tracksuit</h1>
+                <p class="product-description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat veniam impedit aperiam dignissimos optio vel.
+                </p>
+                <a href="#" class="buy-btn">Buy now</a>
+                <button class="nxt-btn">
+                    <img src="./IMG/arrow.png" alt="">
+                </button>
+            </div>
+            <div class="product-img-container">
+                <img src="./IMG/img1.jpg" alt="" class="product-img">
+            </div>
+        </div>
+    </div>
     <script src="./JS/app.js"></script>
 </body>
 </html>
