--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,300;8..144,400;8..144,500;8..144,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sirin+Stencil&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
     <title>Práctica eCommerce</title>
 </head>
@@ -32,7 +33,7 @@
             <img src="./IMG/instagram.png" alt="" class="social-link-img">
         </div>
     </div>
-    <div class="left-right">
+    <div class="right-side">
         <img class="backdrop-img" src="./IMG/img1.jpg" alt="">
         <div class="content">
             <div class="product-detail">
