--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         </div>
         <!-- ------------------------------ -->
         <div class="social-link">
-            <img src="./IMG/facebook.png" alt="" class="social-link-img">
-            <img src="./IMG/instagram.png" alt="" class="social-link-img">
+            <img id="fb" src="./IMG/facebook.png" alt="" class="social-link-img">
+            <img id="ig" src="./IMG/instagram.png" alt="" class="social-link-img">
+            <br>
+            <h6>Joel Martínez</h6>
         </div>
     </div>
     <div class="right-side">
@@ -38,8 +40,8 @@
         <div class="content">
             <div class="product-detail">
                 <h1 class="product-name">Yellow Tracksuit</h1>
-                <p class="product-description">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat veniam impedit aperiam dignissimos optio vel.
+                <p class="product-des">
+                    Conjunto pans amarillo ligero, con sudadera-top
                 </p>
                 <a href="#" class="buy-btn">Buy now</a>
                 <button class="nxt-btn">
